Ingredient list added

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -8,12 +8,31 @@
 
     <body>
         <p><img src="../images/pizza.jpg" alt="A freshly cooked grilled pizza with olives and spring onions, sat on a chopping board with a pizza slicer" </p>
-        <p><h3>Description</h3></p>
+        <p><h2>Description</h2></p>
         <p>On this page we will look at the best way to make your own delicious pizza at home!</p>
         <p>Without breaking the bank, we will explain in very simple steps, how you too can make a mouth watering pizza for yourself.</p>
         <p>If you too want to know the secrets to pizza success, take a look at our simple guide below.</p>
-
         
+        <h3>Ingredients</h3>
+        <h5>For the base</h5>
+        <ul>
+            <li>300g Strong bread flour</li>
+            <li>1 tbsp instant yeast</li>
+            <li>1 tbsp salt</li>
+            <li>1 tbsp olive oil</li>
+        </ul>
+        <h5>For the tomato sauce</h5>
+        <ul>
+            <li>100ml passata</li>
+            <li>handful of fresh basil or 1 tsp dried</li>
+            <li>1 garlic clove</li>
+        </ul>
+        <h5>For the Topping</h5>
+        <ul>
+            <li>125g ball mozzarella</li>
+            <li>Grated or shaved parmsan</li>
+            <li>Handful of cherry tomatoes</li>
+        </ul>
 
     </body>
 </html>
