--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-    <meta charset="UTF-8">
-
+    
     <head>
-        <h1>Pizza</h1>
+        <meta charset="UTF-8">
+        <title>Pizza Recipe</title>
+          <h1>Pizza Recipe</h1>
     </head>
 
     <body>
