Add link for chilli con carne

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/pizza.html">Pizza</a>
+        <p><a href="recipes/pizza.html">Pizza</a></p>
+        <p><a href="recipes/chilli-con-carne.html">Chilli Con Carne</a></p>
     </body>
 
 </html>
