UL item cumin corrected to have bullet point

--- a/recipes/chilli-con-carne.html
+++ b/recipes/chilli-con-carne.html
@@ -21,7 +21,7 @@
             <li>1 tbsp oil</li>
             <li>1 heaped tsp hot chilli powder (1 level tbsp if you want mild)</li>
             <li>1 tsp paprika</li>
-            <1i>1 tsp ground cumin</1i>
+            <li>1 tbsp ground cumin</li>
             <li>500g lean minced beef</li>
             <li>1 beef stock cube</li>
             <li>400g can chopped tomatoes</li>
