Add relative link to S.B.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <h1>Odin Recipes</h1>
         <p><a href="recipes/pizza.html">Pizza</a></p>
         <p><a href="recipes/chilli-con-carne.html">Chilli Con Carne</a></p>
+        <p><a href="recipes/spaghetti-bolognese.html">Spaghetti Bolognese</a> </p>
     </body>
 
 </html>
