Correct grammar and spelling

--- a/recipes/spaghetti-bolognese.html
+++ b/recipes/spaghetti-bolognese.html
@@ -10,8 +10,8 @@
     <body>
         <img src="../images/Spaghetti.jpg" alt="A bowl of spaghetti bolognese mixed together and topped with Parmesan cheese">
         <p><h2>Description</h2></p>
-        <p>On this page we will learn to make the classic Itallian meal of Spaghetti Bolognese.</p>
-        <p>A treat for anyone who tastes this recipe. Here we will learn how to make a scrumptious, yet simple and cheap way to amke this Italian classic.</p>
+        <p>On this page we will learn to make the classic Italian meal of Spaghetti Bolognese.</p>
+        <p>A treat for anyone who tastes this recipe. Here we will learn how to make this classic in a simple and inexpensive way.</p>
 
         <h3>Ingredients</h3>
         <ul>
@@ -28,33 +28,33 @@
         <h5>For the bolognese sauce</h5>
         <ul>
             <li>2x 400g tins of plum tomatoes</li>
-            <li>small pack basil leaves picked, 3/4 finely chopped and the rest left whole for garnish</li>
+            <li>Small pack basil leaves picked, 3/4 finely chopped and the rest left whole for garnish</li>
             <li>1 tsp dried oregano</li>
             <li>2 fresh bay leaves</li>
             <li>2 tbsp tomato puree</li>
             <li>1 beef stock cube</li>
-            <li>1 red chilli deseeded and finely chopped</li>
+            <li>1 red chilli deseeded and finely chopped (Optional)</li>
             <li>125ml red wine</li>
-            <li>6 cherry tomatoes slice in half</li>
+            <li>6 cherry tomatoes sliced in half</li>
         </ul>
         <h5>To season and serve</h5>
         <ul>
             <li>75g parmesan grated, plus extra to serve</li>
             <li>400g spaghetti</li>
-            <li>Crusty bread to serve</li>
+            <li>Crusty bread to serve (Optional)</li>
         </ul>
 
         <h2>Steps</h2>
         <ol>
-            <li>Put a large saucepan on medium heat and add t tbsp of olive oil</li>
-            <li>Add 4 finelt chopped bacon rashers and fry for 10 mins until golden and crisp</li>
-            <li>REduce heat and add 2 onions, 2 carrots, 2 celery sticks, 2 garlic cloves and the leaves of 2-3 sprigs rosemary, all finely chopped. FRy for 10 mins. Stir the veg often until soft.</li>
-            <li>Increase to medium-high heat. Add 500g beef mince and cook stirring for 3-4 mins until meat is browned all over.</li>
-            <li>ADd 2 tins of plum tomatoes, the finely chopped leaves from 3/4 small pack basil, 1 tsp dried oregano, 2 bay leaves, 2 tbsp tomatoe puree, 1 beef stock cube, 1 deseeded and chopped red chilli (if using), 125ml red wine and 6 halved cherry tomatoes. Stir with a wooden spoon, breaking up the plum tomatoes</li>
-            <li>Bring to the boil, reduce to a gentle simmer and cover with lid. Cook for 1hr 15 mins, occasionally stirring until rich, thick sauce.</li>
+            <li>Put a large saucepan on medium heat and add 1 tbsp of olive oil</li>
+            <li>Add 4 finely chopped bacon rashers and fry for 10 mins until golden and crisp</li>
+            <li>Reduce heat and add 2 onions, 2 carrots, 2 celery sticks, 2 garlic cloves and the leaves of 2-3 sprigs rosemary, all finely chopped. Fry for 10 mins. Stir the veg often until soft.</li>
+            <li>Increase to medium-high heat. Add 500g beef mince and cook, stirring for 3-4 mins until meat is browned all over.</li>
+            <li>Add 2 tins of plum tomatoes, the finely chopped leaves from 3/4 small pack of basil, 1 tsp dried oregano, 2 bay leaves, 2 tbsp tomatoe puree, 1 beef stock cube, 1 deseeded and chopped red chilli (if using), 125ml red wine and 6 halved cherry tomatoes. Stir with a wooden spoon, breaking up the plum tomatoes</li>
+            <li>Bring to the boil, reduce to a gentle simmer and cover with lid. Cook for 1 hr 15 mins, occasionally stirring until rich, thick sauce.</li>
             <li>Add 75g grated parmesan, check seasoning and stir</li>
-            <li>When bolognese is nearlt finished, cook 400g of spaghetti, following instructions on packet</li>
-            <li>Drain spaghetti and either stir in the bolognese sauve or serve the sauce on top. Serve with additional grated parmesan, the remaining basil leaves and crusty bread</li>
+            <li>When bolognese is nearly finished, cook 400g of spaghetti, following instructions on packet</li>
+            <li>Drain spaghetti and either stir in the bolognese sauce or serve the sauce on top. Serve with additional grated parmesan, the remaining basil leaves and crusty bread</li>
         </ol>
 
     </body>
