spelling mistakes, standardise image size

--- a/recipes/chilli-con-carne.html
+++ b/recipes/chilli-con-carne.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-        <p><img src="../images/chill.jpeg" alt="A bowl of freshly made chilli con carne with a bottle of orange juice."></p>
+        <img src="../images/chilli.jpg" alt="A bowl of freshly made chilli in a saucepan" height="400">
         <p><h2>Description</h2></p>
         <p>If you are looking to make a delicious chilli con carne for you and those closest to you, then look no further.</p>
         <p>On this page we will look into a quick and easy way to make a tasty chill con carne at home to impress all who try it!</p>
@@ -53,6 +53,7 @@
             <li>REplace lid and turn off heat and leave chilli to stand for 10 minutes before serving.</li>
             <li>Serve with soured cream and plain boiled long rice.</li>
         </ol>
+        <p><a href="../index.html">Back to homepage</a> </p>
 
     </body>
 </html>
