--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-        <p><img src="../images/pizza.jpg" alt="A freshly cooked grilled pizza with olives and spring onions, sat on a chopping board with a pizza slicer" </p>
+        <p><img src="../images/pizza.jpg" alt="A freshly cooked grilled pizza with olives and spring onions, sat on a chopping board with a pizza slicer" height="400" </p>
         <p><h2>Description</h2></p>
         <p>On this page we will look at the best way to make your own delicious pizza at home!</p>
         <p>Without breaking the bank, we will explain in very simple steps, how you too can make a mouth watering pizza for yourself.</p>
@@ -48,6 +48,9 @@
             <li>Serve with extra olive oil.</li>
             <li><em>Repeat above steps for second pizza</em></li>
         </ol>
+
+        <P><a href="../index.html">Back to homepage</a> </P>
+        
 
     </body>
 </html>
