--- a/recipes/spaghetti-bolognese.html
+++ b/recipes/spaghetti-bolognese.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-        <img src="../images/Spaghetti.jpg" alt="A bowl of spaghetti bolognese mixed together and topped with Parmesan cheese">
+        <img src="../images/Spaghetti.jpg" alt="A bowl of spaghetti bolognese and topped with Parmesan cheese" height="400">
         <p><h2>Description</h2></p>
         <p>On this page we will learn to make the classic Italian meal of Spaghetti Bolognese.</p>
         <p>A treat for anyone who tastes this recipe. Here we will learn how to make this classic in a simple and inexpensive way.</p>
@@ -57,5 +57,8 @@
             <li>Drain spaghetti and either stir in the bolognese sauce or serve the sauce on top. Serve with additional grated parmesan, the remaining basil leaves and crusty bread</li>
         </ol>
 
+        <p><a href="../index.html">Back to homepage</a> </p>
+
     </body>
+
 </html>
