Change tab title

--- a/recipes/spaghetti-bolognese.html
+++ b/recipes/spaghetti-bolognese.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Spaghetti Bolognese</title>
-        <h1>Spaghetti Bolognese</h1>
+        <h1>Spaghetti Bolognese Recipe</h1>
 
     </head>
 
