correct spelling and grammar

--- a/recipes/chilli-con-carne.html
+++ b/recipes/chilli-con-carne.html
@@ -11,7 +11,7 @@
         <img src="../images/chilli.jpg" alt="A bowl of freshly made chilli in a saucepan" height="400">
         <p><h2>Description</h2></p>
         <p>If you are looking to make a delicious chilli con carne for you and those closest to you, then look no further.</p>
-        <p>On this page we will look into a quick and easy way to make a tasty chill con carne at home to impress all who try it!</p>
+        <p>On this page we will look into a quick and easy way to make a tasty chill con carne at home that will blow everyone away!</p>
 
         <p><h3>Ingredients</h3></p>
         <ul>
@@ -24,11 +24,11 @@
             <li>1 tbsp ground cumin</li>
             <li>500g lean minced beef</li>
             <li>1 beef stock cube</li>
-            <li>400g can chopped tomatoes</li>
+            <li>400g can of chopped tomatoes</li>
             <li>1/2 tsp dried marjoram</li>
             <li>1 tsp sugar</li>
-            <li> 2 tbsp tomato puree</li>
-            <li>410g can red kidney beans</li>
+            <li>2 tbsp tomato puree</li>
+            <li>410g can of red kidney beans</li>
             <li>plain boiled long grain rice, to serve</li>
             <li>soured cream, to serve</li>
 
@@ -38,19 +38,19 @@
         <ol>
             <li>Prepare vegetables. Chop 1 large onion into small dice.</li>
             <li>Cut 1 red pepper in half lengthways, remove stalk and wash the seeds away, then chop. Peel and finely chop 2 garlic cloves</li>
-            <li>Warm pan on medium heat on hob. Add 1 tbsp oil and leave for 1-2 minutes until hot.</li>
+            <li>Warm pan to medium heat on hob. Add 1 tbsp oil and leave for 1-2 minutes until hot.</li>
             <li>Add the onion, stirring frequently, for about 5 minutes or until soft and translucent.</li>
             <li>Add garlic, red pepper, 1 heaped tsp hot chilli powder, 1 tsp paprika and 1 tsp ground cumin.</li>
-            <li>stir well and cook for 5 minutes, stirring occasionally.</li>
-            <li>Turn up the heat and add 500g lean minced beef to teh pan and break it up with a spoon or spatula. Brown the minced beef.</li>
-            <li>Stir and prod for at least 5 minutes until all the mince is in uniform, minced-sized lumps. ENsure to fry not stew.</li>
-            <li>Make the sauce - Crumble 1 beef stock cube into 300ml hot water. POur this into the pan with the mince.</li>
+            <li>Stir well and cook for 5 minutes, stirring occasionally.</li>
+            <li>Turn up the heat and add 500g lean minced beef to the pan and break it up with a spoon or spatula. Brown the minced beef.</li>
+            <li>Stir and prod for at least 5 minutes until all the mince is in uniform, minced-sized lumps. Ensure to fry not stew.</li>
+            <li>Make the sauce - Crumble 1 beef stock cube into 300ml hot water. Pour this into the pan with the mince.</li>
             <li>Add 400g of chopped tomatoes. Add 1/2 tsp of dried marjoram, 1 tsp sugar and season with salt and pepper. Add about 2 tbsp of tomato puree and stir well.</li>
-            <li>Simmer gently. BRing to the boil and stir well before placing the lid on the pan. TUrn down the heat until gently bubbling and leave for 20 minutes.</li>
+            <li>Simmer gently. Bring to the boil and stir well before placing the lid on the pan. Turn down the heat until gently bubbling and leave for 20 minutes.</li>
             <li>Check occasionally to stir. Ensure sauce not sticking to bottom of pan.</li>
-            <li>Drain and rinse 410g can of red kidney beans in a sieve and stir into chilli pot. bring to the boil again and gently bubble without lid for another 10 minutes</li>
+            <li>Drain and rinse 410g can of red kidney beans in a sieve and stir into chilli pot. Bring to the boil again and gently bubble without lid for another 10 minutes</li>
             <li>Taste chilli and season</li>
-            <li>REplace lid and turn off heat and leave chilli to stand for 10 minutes before serving.</li>
+            <li>Replace lid and turn off heat and leave chilli to stand for 10 minutes before serving.</li>
             <li>Serve with soured cream and plain boiled long rice.</li>
         </ol>
         <p><a href="../index.html">Back to homepage</a> </p>
