Add steps and correct spelling

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -17,15 +17,16 @@
         <h3>Ingredients</h3>
         <h5>For the base</h5>
         <ul>
-            <li>300g Strong bread flour</li>
+            <li>300g strong bread flour</li>
             <li>1 tbsp instant yeast</li>
             <li>1 tbsp salt</li>
-            <li>1 tbsp olive oil</li>
+            <li>1 tbsp olive oil, plus extra for drizzling</li>
         </ul>
+
         <h5>For the tomato sauce</h5>
         <ul>
             <li>100ml passata</li>
-            <li>handful of fresh basil or 1 tsp dried</li>
+            <li>Handful of fresh basil or 1 tsp dried</li>
             <li>1 garlic clove</li>
         </ul>
         <h5>For the Topping</h5>
@@ -37,15 +38,13 @@
 
         <h3>Steps</h3>
         <ol>
-            <li>Roll out the dough and knead it. Then split it into two balls</li>
-            <li><strong>On a floured surface</strong>, roll out the dough into large circles, about 25cm across using a rolling pin</li>
-            <li>Ensure dough is very thin as it will rise. Lift these dough circles onto two floured baking sheets</li>
-            <li>Heat oven to 240C/220 fan/ gas 8</li>
-            <li>Put another baking sheet or an upturned baking tray in the oven on the top shelf</li>
-            <li>Smooth sauce over bases with back of spoon</li>
-            <li>Scatter cheese and tomatoes, drizzle olive oil and season</li>
-            <li>Put one pizza, still on its baking sheet, on top of the preheated sheet or tray and back for 8-10 mins until crisp</li>
-            <li>Serve with extra olive oil.</li>
+            <li>Make the base: Add flour to a large bowl and stir in the yeast and salt. Make a well and the mixture and pour in 200ml warm water and the oil and bring together with a wooden spoon until soft, fairly wet dough. Turn onto lightly floured surface and knead for 5 mins until smooth, Cover with a tea towel and set aside. You can elave the dough to rise, but not essential for a thin crust.</li>
+            <li>Make the sauce: Mix the passata, basil and crushed garlic together, then season to taste. Leave to stand at room temperature while you shape the base</li>
+            <li>Roll out the dough and knead it. Then split it into two balls <strong>On a floured surface</strong>, roll out the dough into large circles, about 25cm across using a rolling pin. Ensure dough is very thin as it will rise. Lift these dough circles onto two floured baking sheets</li>
+            <li>Top and bake: Heat oven to 240C/220 fan/ gas 8. Put another baking sheet or an upturned baking tray in the oven on the top shelf</li>
+            <li>Smooth sauce over bases with back of spoon. Scatter cheese and tomatoes, drizzle olive oil and season</li>
+            <li>Put one pizza, still on its baking sheet, on top of the preheated sheet or tray and bake for 8-10 mins until crisp</li>
+            <li>Serve with extra olive oil and basil leaves if using.</li>
             <li><em>Repeat above steps for second pizza</em></li>
         </ol>
 
