--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="style.css"
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-            <p><a href="recipes/pizza.html">Pizza</a></p>
-            <p><a href="recipes/chilli-con-carne.html">Chilli Con Carne</a></p>
-            <p><a href="recipes/spaghetti-bolognese.html">Spaghetti Bolognese</a></p>
+        <h1 div class="head">Odin Recipes</h1>
+            <p div class="pizza"><a href="recipes/pizza.html">Pizza</a></p>
+            <p div class="chilli"><a href="recipes/chilli-con-carne.html">Chilli Con Carne</a></p>
+            <p div class="sb"><a href="recipes/spaghetti-bolognese.html">Spaghetti Bolognese</a></p>
     
     </body>
 
