--- a/recipes/chilli-con-carne.html
+++ b/recipes/chilli-con-carne.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Chilli Con Carne</title>
         <h1>Chill Con Carne Recipe</h1>
+        <link rel="stylesheet" href="chilli-style.css">
 
     </head>
 
