git commit -m "style changes"

--- a/recipes/chilli-con-carne.html
+++ b/recipes/chilli-con-carne.html
@@ -4,15 +4,14 @@
         <meta charset="UTF-8">
         <title>Chilli Con Carne</title>
         <h1>Chill Con Carne Recipe</h1>
-        <link rel="stylesheet" href="chilli-style.css">
+        <link rel="stylesheet" href="chilli-style.css"
 
     </head>
 
     <body>
-        <img src="../images/chilli.jpg" alt="A bowl of freshly made chilli in a saucepan" height="400">
-        <p><h2>Description</h2></p>
-        <p>If you are looking to make a delicious chilli con carne for you and those closest to you, then look no further.</p>
-        <p>On this page we will look into a quick and easy way to make a tasty chill con carne at home that will blow everyone away!</p>
+        <img src="../images/chilli.jpg" alt="A bowl of freshly made chilli in a saucepan" height="400" >
+            <p div class="des">If you are looking to make a delicious chilli con carne for you and those closest to you, then look no further.</p>
+            <p div class="des">On this page we will look into a quick and easy way to make a tasty chill con carne at home that will blow everyone away!</p>
 
         <p><h3>Ingredients</h3></p>
         <ul>
