--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -4,15 +4,15 @@
     <head>
         <meta charset="UTF-8">
         <title>Pizza Recipe</title>
+        <link rel="stylesheet" href="pizza-style.css">
           <h1>Pizza Recipe</h1>
     </head>
 
     <body>
         <p><img src="../images/pizza.jpg" alt="A freshly cooked grilled pizza with olives and spring onions, sat on a chopping board with a pizza slicer" height="400" </p>
-        <p><h2>Description</h2></p>
-        <p>On this page we will look at the best way to make your own delicious pizza at home!</p>
-        <p>Without breaking the bank, we will explain in very simple steps, how you too can make a mouth watering pizza for yourself.</p>
-        <p>If you too want to know the secrets to pizza success, take a look at our simple guide below.</p>
+        <p div class="des">On this page we will look at the best way to make your own delicious pizza at home!</p>
+        <p div class="des">Without breaking the bank, we will explain in very simple steps, how you too can make a mouth watering pizza for yourself.</p>
+        <p div class="des">If you too, want to know the secrets to pizza success, take a look at our simple guide below.</p>
         
         <h3>Ingredients</h3>
         <h5>For the base</h5>
