--- a/recipes/spaghetti-bolognese.html
+++ b/recipes/spaghetti-bolognese.html
@@ -3,15 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <title>Spaghetti Bolognese</title>
+        <link rel="stylesheet" href="spaghetti-style.css">
         <h1>Spaghetti Bolognese Recipe</h1>
 
     </head>
 
     <body>
         <img src="../images/Spaghetti.jpg" alt="A bowl of spaghetti bolognese and topped with Parmesan cheese" height="400">
-        <p><h2>Description</h2></p>
-        <p>On this page we will learn to make the classic Italian meal of Spaghetti Bolognese.</p>
-        <p>A treat for anyone who tastes this recipe. Here we will learn how to make this classic in a simple and inexpensive way.</p>
+        <p div class="des">On this page we will learn to make the classic Italian meal of Spaghetti Bolognese.</p>
+        <p div class="des">A treat for anyone who tastes this recipe. Here we will learn how to make this classic in a simple and inexpensive way.</p>
 
         <h3>Ingredients</h3>
         <ul>
